<resources>
    <string name="app_name">Watch Now</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="tv_shows">TV Shows</string>
    <string name="movies">Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="popular_tv_shows">Popular TV Shows</string>
    <string name="movie_title">Movie Title</string>
    <string name="description_dummy">A brilliant but clumsy high school senior vows to get into her late father\'s alma mater by transforming herself and a misfit squad into dance champions.</string>
    <string name="dummy_priority">198.000</string>
    <string name="dummy_date">Mar 31, 2001</string>
    <string name="rating">Rating</string>
    <string name="poster">Poster</string>
    <string name="back_button">Back Button</string>
    <string name="transparent_to_white_gradient">Transparent to white gradient</string>
    <string name="favorite">Favorite</string>
    <string name="your_favorite_movie">Your Favorite Movie</string>
    <string name="your_favorite_tv_show">Your Favorite TV Show</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv_show">Favorite TV Show</string>
    <string name="you_haven_t_added_anything_yet">You haven\'t added anything yet</string>
</resources>