<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.artwork.space.watchnow.ui.movieFragment.MovieFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="com.artwork.space.watchnow.ui.tvshowFragment.TVShowFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_tv_shows" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.artwork.space.watchnow.ui.favoriteFragment.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite"/>

</navigation>