<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity.detail.movie.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/detail_movie_iv_poster"
            android:layout_width="match_parent"
            android:layout_height="520dp"
            android:contentDescription="@string/poster"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_dummy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/detail_movie_btn_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back_button" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/transparent_to_white_gradient"
            app:layout_constraintBottom_toBottomOf="@+id/detail_movie_iv_poster"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/transparent_to_white_gradient" />

        <TextView
            android:id="@+id/detail_movie_tv_title"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/movie_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_iv_poster" />

        <ImageView
            android:id="@+id/detail_movie_iv_rating"
            android:layout_width="110dp"
            android:layout_height="22dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/rating"
            android:src="@drawable/five_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_tv_title" />

        <TextView
            android:id="@+id/detail_movie_tv_popularity"
            style="@style/DefaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/dummy_priority"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/detail_movie_iv_rating"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_tv_title" />

        <TextView
            android:id="@+id/detail_movie_tv_release_date"
            style="@style/DefaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/dummy_date"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_iv_rating" />

        <TextView
            android:id="@+id/detail_movie_tv_description"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/description_dummy"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_tv_release_date" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>